--- a/mobypick_app/templates/landing_page.html
+++ b/mobypick_app/templates/landing_page.html
@@ -1,15 +1,9 @@
 <!-- mobypick_app/templates/landing_page.html -->
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MobyPick - A Book Recommendation Engine</title>
-</head>
-<body>
-    <h1>MobyPick - A Book Recommendation Engine</h1>
-    <a href="{% url 'cognito_login' %}"><button>Get Started</button></a>
-</body>
-</html>
+{% extends "base/base.html" %}
+
+{% block content %}
+</br>
+<a href="{% url 'select_books' %}"><button>Select Books</button></a>
+{% endblock%}
+
