Added localhost to allowed user as well, for local testing

--- a/mobypick_app/templates/select_books.html
+++ b/mobypick_app/templates/select_books.html
@@ -4,6 +4,22 @@
 
 {% block content %}
 </br>
+
+<div class="container">
+    <div class="row">
+      <div class="col-sm">
+        One of three columns
+      </div>
+      <div class="col-sm">
+        One of three columns
+      </div>
+      <div class="col-sm">
+        One of three columns
+      </div>
+    </div>
+  </div>
 <a href="{% url 'landing_page' %}"><button>Back to landing page</button></a>
+
+
 {% endblock%}
 
