Added col-2 to create book divs in select_books.html

--- a/mobypick_app/templates/select_books.html
+++ b/mobypick_app/templates/select_books.html
@@ -7,17 +7,33 @@
 
 <div class="container">
     <div class="row">
-      <div class="col-sm">
-        One of three columns
-      </div>
-      <div class="col-sm">
-        One of three columns
-      </div>
-      <div class="col-sm">
-        One of three columns
-      </div>
+
+        <div class="col-2">
+          <img src="https://images-worker.bonanzastatic.com/afu/images/069e/8d8f/be88_6591207841/51vvyfgws_2bl._sl1500_.jpg" alt="Image" class="img-fluid">
+          <p>First line of text</p>
+          <p>Second line of text</p>
+        </div>
+
+        <div class="col-2">
+            <img src="https://images-worker.bonanzastatic.com/afu/images/069e/8d8f/be88_6591207841/51vvyfgws_2bl._sl1500_.jpg" alt="Image" class="img-fluid">
+            <p>First line of text</p>
+            <p>Second line of text</p>
+         </div>
+
+        <div class="col-2">
+            <img src="https://images-worker.bonanzastatic.com/afu/images/069e/8d8f/be88_6591207841/51vvyfgws_2bl._sl1500_.jpg" alt="Image" class="img-fluid">
+            <p>First line of text</p>
+            <p>Second line of text</p>
+        </div>
+
+         <div class="col-2">
+            <img src="https://images-worker.bonanzastatic.com/afu/images/069e/8d8f/be88_6591207841/51vvyfgws_2bl._sl1500_.jpg" alt="Image" class="img-fluid">
+            <p>First line of text</p>
+            <p>Second line of text</p>
+        </div>
     </div>
-  </div>
+
+</div>
 <a href="{% url 'landing_page' %}"><button>Back to landing page</button></a>
 
 
