--- a/mobypick_app/templates/select_books.html
+++ b/mobypick_app/templates/select_books.html
@@ -7,12 +7,14 @@
 
 <div class="container">
     <div class="row">
-
-        <div class="col-2">
-          <img src="https://images-worker.bonanzastatic.com/afu/images/069e/8d8f/be88_6591207841/51vvyfgws_2bl._sl1500_.jpg" alt="Image" class="img-fluid">
-          <p>First line of text</p>
-          <p>Second line of text</p>
-        </div>
+        
+        {%for book in items%}
+            <div class="col-2">
+                <img src="{{ book.image }}" alt="Image" class="img-fluid">
+                <p>{{ book.name }}</p>
+                <p>{{ book.author }}</p>
+            </div>
+        {% endfor %}
 
         <div class="col-2">
             <img src="https://images-worker.bonanzastatic.com/afu/images/069e/8d8f/be88_6591207841/51vvyfgws_2bl._sl1500_.jpg" alt="Image" class="img-fluid">
