--- a/mobypick_app/templates/landing_page.html
+++ b/mobypick_app/templates/landing_page.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       overflow: hidden;
-      background-image: url('https://s3u.tmimgcdn.com/800x0/u28018890/e0fa40dbf6a2d2fe4ac3d2a48e4b268c.jpg'); /* Replace with your background image URL or path */
+      background-image: url('https://s3u.tmimgcdn.com/800x0/u28018890/e0fa40dbf6a2d2fe4ac3d2a48e4b268c.jpg'); 
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
@@ -40,23 +40,23 @@
       padding: 10px 20px;
       font-size: 1.2em;
       text-decoration: none;
-      background-color: #3498db; /* Set your preferred button color */
-      color: #ffffff; /* Set your preferred button text color */
+      background-color: #3498db; 
+      color: #ffffff; 
       border-radius: 5px;
       transition: background-color 0.3s ease;
     }
 
     .cta-button:hover {
-      background-color: #2980b9; /* Set your preferred button hover color */
+      background-color: #2980b9; 
     }
   </style>
 </head>
 <body>
   <div class="content">
     <h1>MobyPick - A Book Recommendation Engine</h1>
-    <p>Your page description goes here. Customize this text as needed.</p>
-    <a href="{% url 'select_books' %}" class="cta-button">Sign up</a>
-    <a href="{% url 'select_books' %}" class="cta-button">Log in</a>
+    <p>Ever been baffled with the choices you have? So many books to read but so liitle time. Worry no more, we are finally here. We provide book recommendations for you.</p>
+    <a href="{% url 'cognito_login' %}" class="cta-button">Sign up</a>
+    <a href="{% url 'cognito_login' %}" class="cta-button">Log in</a>
     <a href="{% url 'select_books' %}" class="cta-button">Select Books</a>
   </div>
 </body>
