--- a/mobypick_app/templates/landing_page.html
+++ b/mobypick_app/templates/landing_page.html
@@ -57,7 +57,7 @@
     <p>Ever been baffled with the choices you have? So many books to read but so liitle time. Worry no more, we are finally here. We provide book recommendations for you.</p>
     <a href="{% url 'cognito_login' %}" class="cta-button">Sign up</a>
     <a href="{% url 'cognito_login' %}" class="cta-button">Log in</a>
-    <a href="{% url 'select_books' %}" class="cta-button">Select Books</a>
+    <!-- <a href="{% url 'select_books' %}" class="cta-button">Select Books</a> -->
   </div>
 </body>
 </html>
