added logic to click items

--- a/mobypick_app/templates/landing_page.html
+++ b/mobypick_app/templates/landing_page.html
@@ -54,7 +54,7 @@
 <body>
   <div class="content">
     <h1>MobyPick - A Book Recommendation Engine</h1>
-    <p>Ever been baffled with the choices you have? So many books to read but so liitle time. Worry no more, we are finally here. We provide book recommendations for you.</p>
+    <p>Ever been baffled with the choices you have? So many books to read but so little time. Worry no more, we are finally here. We provide book recommendations tailor-made for you!</p>
     <a href="{% url 'cognito_login' %}" class="cta-button">Sign up</a>
     <a href="{% url 'cognito_login' %}" class="cta-button">Log in</a>
   </div>
