--- a/mobypick_app/templates/select_books.html
+++ b/mobypick_app/templates/select_books.html
@@ -22,7 +22,7 @@
   <div class="tab-pane fade {% if forloop.first %}show active{% endif %}" id="tab-{{genre}}-content">
     <div class="row">
       {% for book in books %}
-        <div class="col-2">
+        <div class="col-2" id="{{genre}}-{{forloop.counter}}">
           <img src="{{ book.image_url }}" alt="Image" class="img-fluid">
           <p>{{ book.title }}</p>
           <p>{{ book.author }}</p>
@@ -50,6 +50,27 @@
       $(target).addClass('show active');
     });
   });
+
+  var clickCount = 0;
+  var clickTimeout;
+  var bookDivs = document.querySelectorAll('.col-2');
+  bookDivs.forEach(function(bookDiv){
+    bookDiv.onclick = event => {
+      clickCount++;
+   if (clickCount === 1) {
+      clickTimeout = setTimeout(function() {
+          clickCount = 0;
+          console.log('Single click event triggered');
+          // Add your single-click logic here
+      }, 250);   
+    }else if (clickCount === 2) {
+        clearTimeout(clickTimeout);
+        clickCount = 0;
+        console.log("double click");
+    }
+  }
+});
+
 </script>
 
 
