--- a/mobypick_app/templates/show_recommendations.html
+++ b/mobypick_app/templates/show_recommendations.html
@@ -13,6 +13,7 @@
         #centered-div {
             text-align: center;
             margin: 100px;
+            display: none;
         }
 
         #poster {
@@ -32,22 +33,39 @@
             cursor: pointer;
         }
 
+        #loading-spinner {
+            display: block;
+            text-align: center;
+            margin-top: 20px;
+
+        }
+
+        .loading-text {
+            margin-top: 10px;
+        }
+
 
     </style>
 
 </head>
 <body>
+    <div id="loading-spinner">
+        <div class="spinner-border" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+        <div class="loading-text">Fetching your recommendations...</div>
+    </div>
     <div id="centered-div">
         <img id="poster" src="{{ book.poster_url }}" alt="{{ book.title }} Poster">
-        <h2>{{ book.title }}</h2>
-        <p>{{ book.author }}</p>
+        <h2 id="book-title">{{ book.title }}</h2>
+        <p id="book-author">{{ book.author }}</p>
         
         <div id="buttons-container">
-            <button class="icon-button" id="prev-button">Previous</button>
+            <button class="icon-button" id="prev-button" onclick="changeBook(-1)">Previous</button>
             <button class="icon-button" onclick="logAction('already read')">Check</button>
             <button class="icon-button" onclick="logAction('didn\'t like recommendation')">Thumbs Down</button>
             <button class="icon-button" onclick="logAction('want to read')">Plus</button>
-            <button class="icon-button" id="next-button">Next</button>
+            <button class="icon-button" id="next-button" onclick="changeBook(1)">Next</button>
         </div>
     </div>
     {% load static %}
@@ -65,56 +83,68 @@
     <script type="text/javascript" src="{% static 'js/sdk/aws-sdk-min.js' %}"></script>
     <script>
         var sdk = apigClientFactory.newClient({});
-        sdk.config.update({
-                accessKeyId: 'AKIAQCUQKUEC7JI53GUM',
-                secretAccessKey: '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',
-                region: 'us-east-1',
-        });
         </script>
-        
+        <script>
+            function hideLoadingSpinner() {
+                document.getElementById('loading-spinner').style.display = 'none';
+                document.getElementById('centered-div').style.display = 'block';
+            }
+        </script>
         <script>
         function getRecommendations(lang, id, genre){
             var params = {
+                p1: 'Access-Control-Allow-Origin',
                 'languageCode':lang,
                 'userID':id,
                 'includeGenres':genre
             }
-            return sdk.getRecommendationsGet(params);
+            return sdk.getRecommendationsGet(params, {}, {});
         }
 
-        getRecommendations('en', '100', 'mystery_thriller_crime').then((response) =>{
-            console.log(response);
-        });
-
         let currentIndex = 0;
-        const books = {{ recommendations|safe }};
-
+        var books=[];
 
         function logAction(action) {
             console.log(action);
         }
-
-        function updateBook() {
-            const book = books[currentIndex];
-            document.getElementById('poster').src = book.poster_url;
-            document.getElementById('poster').alt = book.title + ' Poster';
-            document.getElementById('centered-div').getElementsByTagName('h2')[0].innerText = book.title;
-            document.getElementById('centered-div').getElementsByTagName('p')[0].innerText = book.author;
+        
+        function updateBookInfo(index) {
+            document.getElementById('poster').src = books[Object.keys(books)[currentIndex]].poster_url;
+            document.getElementById('book-title').innerText = books[Object.keys(books)[currentIndex]].title;
+            document.getElementById('book-author').innerText = books[Object.keys(books)[currentIndex]].author;
         }
 
-        document.addEventListener('DOMContentLoaded', () => {
-            updateBook();
+        function changeBook(direction) {
+            currentIndex += direction;
+            console.log(books);
+            var length = Object.keys(books).length;
 
-            document.getElementById('prev-button').addEventListener('click', () => {
-                currentIndex = (currentIndex - 1 + books.length) % books.length;
-                updateBook();
-            });
+            // Ensure the index stays within the bounds of the books array
+            if (currentIndex < 0) {
+                currentIndex = length - 1;
+            } else if (currentIndex > length) {
+                currentIndex = 0;
+            }
 
-            document.getElementById('next-button').addEventListener('click', () => {
-                currentIndex = (currentIndex + 1) % books.length;
-                updateBook();
-            });
-        });
+            updateBookInfo(currentIndex);
+        }
+
+        
+        // TODO: change params to user preferences
+
+        getRecommendations('en', '100', 'mystery_thriller_crime').then((response) =>{
+            
+            console.log(response);
+            hideLoadingSpinner();
+            if(response.status == 200){
+                books = response.data;
+                console.log(books);
+                updateBookInfo(currentIndex);
+            }else{
+                console.log("err");
+            }
+        });        
+
     </script>
     
 </body>
