--- a/mobypick_app/templates/show_recommendations.html
+++ b/mobypick_app/templates/show_recommendations.html
@@ -44,6 +44,22 @@
             margin-top: 10px;
         }
 
+        #logout-button {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            background-color: #3498db; /* Green background color */
+            color: white; /* White text color */
+            border: none; /* No borders */
+            padding: 10px 20px; /* Padding */
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 5px;
+            display:none;
+        }   
 
     </style>
 
@@ -55,6 +71,7 @@
         </div>
         <div class="loading-text">Fetching your recommendations...</div>
     </div>
+    <button id="logout-button" onclick="logout()">Logout</button>
     <div id="centered-div">
         <img id="poster" src="{{ book.poster_url }}" alt="{{ book.title }} Poster">
         <h2 id="book-title">{{ book.title }}</h2>
@@ -88,6 +105,11 @@
             function hideLoadingSpinner() {
                 document.getElementById('loading-spinner').style.display = 'none';
                 document.getElementById('centered-div').style.display = 'block';
+                document.getElementById('logout-button').style.display = 'block';
+            }
+
+            function logout(){
+                window.location.href = "{% url 'cognito_logout' %}"
             }
         </script>
         <script>
