--- a/mobypick_app/templates/show_recommendations.html
+++ b/mobypick_app/templates/show_recommendations.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
- <!-- TODO: Add a logout button -->
+ <!-- TODO: Add a Manage Preferences button that redirects to profile page -->
+ <!-- TODO: Create a profile page, with the genre and language preferences as input fields, to UPDATE the dynamoDB table -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
