fetching user based recommendations from Dynamo works

--- a/mobypick_app/templates/loading.html
+++ b/mobypick_app/templates/loading.html
@@ -35,7 +35,8 @@
                 var isNewUser = localStorage.getItem('isNewUser');
                 console.log(isNewUser);
                 localStorage.removeItem('isNewUser');
-                
+                console.log("{{userID}}")
+                localStorage.setItem('userID', " {{ userID }} ");
                 if (isNewUser === 'true') {
                     // Redirect to select_books
                     window.location.href = "{% url 'select_books' %}";
