--- a/mobypick_app/templates/select_books.html
+++ b/mobypick_app/templates/select_books.html
@@ -110,6 +110,7 @@
 
 function submit(){
   console.log(selectedBooks);
+  // TODO: need to add this to the wantToRead list in DynamoDB for this user
 }
 
 function skip(){
