--- a/mobypick_app/templates/show_recommendations.html
+++ b/mobypick_app/templates/show_recommendations.html
@@ -65,6 +65,23 @@
             display:none;
         }   
 
+        #manage-prof-button {
+            position: fixed;
+            top: 10px;
+            right: 50px;
+            background-color: #3498db; /* Green background color */
+            color: white; /* White text color */
+            border: none; /* No borders */
+            padding: 10px 20px; /* Padding */
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 5px;
+            display:none;
+        }  
+
     </style>
 
 </head>
@@ -76,6 +93,7 @@
         <div class="loading-text">Fetching your recommendations...</div>
     </div>
     <button id="logout-button" onclick="logout()">Logout</button>
+    <button id="manage-prof-button" onclick="managePrefs()">Profile</button>
     <div id="centered-div">
         <img id="poster" src="{{ book.poster_url }}" alt="{{ book.title }} Poster">
         <h2 id="book-title">{{ book.title }}</h2>
@@ -160,7 +178,7 @@
             updateBookInfo(currentIndex);
         }
         var userID = localStorage.getItem('userID');
-        console.log(userID);
+        // TODO: get the local storage value for user lang and genre prefs, and add them here instead of null
         getRecommendations(null,userID,null).then((response) =>{
             console.log(response);
             hideLoadingSpinner();
