updated logic to get the correct user preferences while getting recs

--- a/mobypick_app/templates/profile.html
+++ b/mobypick_app/templates/profile.html
@@ -60,7 +60,7 @@
         
     };
     function getRecommendations(){
-            window.location.href ='{% url "show_recommendations" %}'
+            window.location.href ='{% url "getLatestRecommendations" %}'
     }
 </script>
 
