--- a/mobypick_app/templates/show_recommendations.html
+++ b/mobypick_app/templates/show_recommendations.html
@@ -129,6 +129,16 @@
             }
 
             function logout(){
+                localStorage.clear()
+                sessionStorage.clear()
+                var cookies = document.cookie;
+                for (var i = 0; i < cookies.split(";").length; ++i)
+                {
+                    var myCookie = cookies[i];
+                    var pos = myCookie.indexOf("=");
+                    var name = pos > -1 ? myCookie.substr(0, pos) : myCookie;
+                    document.cookie = name + "=;expires=Thu, 01 Jan 1970 00:00:00 GMT";
+                }
                 window.location.href = "{% url 'cognito_logout' %}"
             }
         </script>
