--- a/mobypick_app/templates/profile.html
+++ b/mobypick_app/templates/profile.html
@@ -21,6 +21,21 @@
     .cta-button:hover {
       background-color: #2980b9; 
     }
+    #logout-button {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            background-color: #3498db; /* Green background color */
+            color: white; /* White text color */
+            border: none; /* No borders */
+            padding: 10px 20px; /* Padding */
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 5px;
+        }  
     </style>
 </head>
 <body>
@@ -62,7 +77,24 @@
     function getRecommendations(){
             window.location.href ='{% url "getLatestRecommendations" %}'
     }
+
+    function logout(){
+        localStorage.clear()
+        sessionStorage.clear()
+        var cookies = document.cookie;
+        for (var i = 0; i < cookies.split(";").length; ++i)
+        {
+            var myCookie = cookies[i];
+            var pos = myCookie.indexOf("=");
+            var name = pos > -1 ? myCookie.substr(0, pos) : myCookie;
+            document.cookie = name + "=;expires=Thu, 01 Jan 1970 00:00:00 GMT";
+        }
+        window.location.href = "{% url 'cognito_logout' %}"
+        }
 </script>
+
+<button id="logout-button" onclick="logout()">Logout</button>
+
 
 <div style="text-align: center;">
     <h1>Your Profile</h1>
